Member activity implemented;

--- a/resources/assets/modules/Application.scss
+++ b/resources/assets/modules/Application.scss
@@ -6,6 +6,7 @@
 @import "../vue/Boxes";
 @import "../vue/Box";
 @import "../vue/Button";
+@import "../vue/ClanAccount";
 @import "../vue/ClanList";
 @import "../vue/Input";
 @import "../vue/Messages";
