Clan activity: force loading on click on member display name;

--- a/resources/assets/vue/ClanList.scss
+++ b/resources/assets/vue/ClanList.scss
@@ -73,6 +73,14 @@
         }
     }
 
+    tbody .displayName {
+        cursor: pointer;
+
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+
     tbody td.loading {
         color: #4C4C6B;
         text-align: center;
