--- a/resources/assets/vue/ClanAccount.scss
+++ b/resources/assets/vue/ClanAccount.scss
@@ -25,6 +25,7 @@
     tbody td.players {
         > .you { color: #4E61A7; }
         > .ally { color: #C52424; }
+        > .allyCommon { color: #FF8508; }
         > .external { color: rgba(0, 0, 0, 0.4); }
         > .unconsidered { color: rgba(0, 0, 0, 0.15); }
     }
